убрана прямая работа с файлами

--- a/src/Template/cup/docs/dev/twig.twig
+++ b/src/Template/cup/docs/dev/twig.twig
@@ -50,7 +50,7 @@
 
             <span class="d-block text-muted">(files functions)</span>
             <ul>
-                <li><b>files($data = [])</b> - возвращает список файлов подходящий под выборку (ищет по uuid, item, item_uuid)</li>
+                <li><b>files($data = [])</b> - возвращает список файлов подходящий под выборку (ищет по uuid)</li>
             </ul>
 
             <span class="d-block text-muted">(publication functions)</span>
@@ -68,10 +68,10 @@
             <ul>
                 <li><b>catalog_category()</b> - возвращает список категорий товаров</li>
                 <li><b>catalog_breadcrumb(\App\Domain\Entities\Catalog\Category $category = null)</b> - возвращает список родительских категорий для выбранной категории</li>
-                <li><b>catalog_products($category_uuid, $order = [], $limit = 10, $offset = null)</b> - возвращает товар или список товаров (ищет по category)</li>
-                <li><b>catalog_product($unique = null, $order = [], $limit = 10, $offset = null)</b> - возвращает товар или список товаров (ищет по uuid, address)</li>
+                <li><b>catalog_products($unique, $order = [], $limit = 10, $offset = null)</b> - возвращает товар или список товаров (ищет по category_uuid, external_id)</li>
+                <li><b>catalog_product($unique = null, $order = [], $limit = 10, $offset = null)</b> - возвращает товар или список товаров (ищет по uuid, external_id, address)</li>
                 <li><b>catalog_product_view(\Ramsey\Uuid\UuidInterface $uuid = null, $limit = 10)</b> - сохраняет переданный в аргумент uuid товара, если null возвращает список товаров</li>
-                <li><b>catalog_order($unique)</b> - получение заказа</li>
+                <li><b>catalog_order($unique)</b> - получение заказа (ищет по uuid, external_id)</li>
             </ul>
 
             <span class="d-block text-muted">(other functions)</span>
