--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -3,7 +3,7 @@
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
-                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                <img src="{{ product.getFiles().first().getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
             </a>
             <div class="pi-links">
                 {# add class item_add to btn #}
@@ -18,6 +18,6 @@
         </div>
 
         {# include product options #}
-        {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product, 'files': files} only %}
+        {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product} only %}
     </div>
 </div>
