--- a/theme/default/catalog.category.twig
+++ b/theme/default/catalog.category.twig
@@ -68,7 +68,7 @@
                 <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                     <div class="row">
                         {% for product in products.filtered %}
-                            {% include 'catalog.category.product.twig' with {'categories':categories,'product':product,'files':files} only %}
+                            {% include 'catalog.category.product.twig' with {'categories':categories,'product':product} only %}
                         {% endfor %}
                     </div>
                     <div class="row justify-content-center">
