--- a/theme/default/catalog.product.viewed.twig
+++ b/theme/default/catalog.product.viewed.twig
@@ -2,7 +2,6 @@
 
 {% if uuids and uuids|count > 4 %}
     {% set viewed = catalog_product(uuids) %}
-    {% set files = files({'item': 'catalog_product', 'item_uuid': uuids}) %}
 
     <!-- VIEWED PRODUCTS section -->
     <section class="related-product-section">
@@ -16,7 +15,7 @@
                     <div class="product-item" data-catalog-product>
                         <div class="pi-pic">
                             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
-                                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                                <img src="{{ product.getFiles().first().getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
                             </a>
                             <div class="pi-links">
                                 <a href="#" class="add-card" data-catalog-product-add><i class="flaticon-bag"></i><span>В корзину</span></a>
@@ -30,7 +29,7 @@
                         </div>
 
                         {# include product options #}
-                        {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product, 'files': files} only %}
+                        {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product} only %}
                     </div>
                 {% endfor %}
             </div>
