--- a/theme/default/products/last-list.twig
+++ b/theme/default/products/last-list.twig
@@ -7,14 +7,13 @@
 
         {% set categories = catalog_category() %}
         {% set products = catalog_product({}, {'date': 'desc'}, 10) %}
-        {% set files = files({'item': 'catalog_product', 'item_uuid': products.pluck('uuid')}) %}
 
         <div class="product-slider owl-carousel">
             {% for product in products %}
                 <div class="product-item" data-catalog-product>
                     <div class="pi-pic">
                         <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}" style="text-align: center;">
-                            <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                            <img src="{{ product.getFiles().first().getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
                         </a>
                         <div class="pi-links">
                             <a href="javascript:;" class="add-card" data-catalog-product-add><i class="flaticon-bag"></i><span>В корзину</span></a>
@@ -28,7 +27,7 @@
                     </div>
 
                     {# include product options #}
-                    {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product, 'files': files} only %}
+                    {% include 'catalog.product.options.twig' with {'categories': categories, 'product': product} only %}
                 </div>
             {% endfor %}
         </div>
