--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -66,6 +66,7 @@
                                         {% include 'cup/docs/dev/twig.twig' %}
                                         {% include 'cup/docs/dev/structures.twig' %}
                                         {% include 'cup/docs/dev/api.twig' %}
+                                        {% include 'cup/docs/dev/tasks.twig' %}
                                     </div>
                                 </div>
                             </div>
