--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -6,11 +6,11 @@
     <meta name="canonical" content="{{ parameter('common_homepage') }}">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+    <link href="/default/img/favicon.ico" rel="shortcut icon" />
 
     <style>* { font-display: auto; }</style>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/default/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/default/css/style.css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -56,21 +56,21 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,700,700i">
 
 
-        <link rel="stylesheet" href="/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/css/flaticon.css">
-        <link rel="stylesheet" href="/css/slicknav.min.css">
-        <link rel="stylesheet" href="/css/jquery-ui.min.css">
-        <link rel="stylesheet" href="/css/owl.carousel.min.css">
-        <link rel="stylesheet" href="/css/animate.css">
+        <link rel="stylesheet" href="/default/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/default/css/flaticon.css">
+        <link rel="stylesheet" href="/default/css/slicknav.min.css">
+        <link rel="stylesheet" href="/default/css/jquery-ui.min.css">
+        <link rel="stylesheet" href="/default/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="/default/css/animate.css">
 
-        <script src="/js/jquery-3.2.1.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/jquery.slicknav.min.js"></script>
-        <script src="/js/owl.carousel.min.js"></script>
-        <script src="/js/jquery.nicescroll.min.js"></script>
-        <script src="/js/jquery.zoom.min.js"></script>
-        <script src="/js/jquery-ui.min.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="/default/js/jquery-3.2.1.min.js"></script>
+        <script src="/default/js/bootstrap.min.js"></script>
+        <script src="/default/js/jquery.slicknav.min.js"></script>
+        <script src="/default/js/owl.carousel.min.js"></script>
+        <script src="/default/js/jquery.nicescroll.min.js"></script>
+        <script src="/default/js/jquery.zoom.min.js"></script>
+        <script src="/default/js/jquery-ui.min.js"></script>
+        <script src="/default/js/main.js"></script>
         <script src="/assets/js/plugin/sweetalert/sweetalert2.all.min.js"></script>
 
         {% include 'mixin/adbd.twig' %}
